--- a/src/app/components/nav-blank/nav-blank.component.html
+++ b/src/app/components/nav-blank/nav-blank.component.html
@@ -20,10 +20,10 @@
                     <a class="nav-link" routerLink="/home" routerLinkActive="active-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/products" routerLinkActive="active-link">products</a>
+                    <a class="nav-link" routerLink="/products" routerLinkActive="active-link">Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/brands" routerLinkActive="active-link">brands</a>
+                    <a class="nav-link" routerLink="/brands" routerLinkActive="active-link">Brands</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/categories" routerLinkActive="active-link">categories</a>
